--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Chuck Norish</title>
   </head>
-  <body style="background-color: #d03447;">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  <body style="background-color: #F12A41;">
+    <noscript>An API based joke application.</noscript>
     <div id="root" ></div>
     <!--
       This HTML file is a template.
